# Gaming-Robot-Arm

./: .gaming_robot_arm_launcher.json  .gitignore  .gitmodules  Project_Structure.drawio  README.md  calibration.py  camera.py  config.py  figure_detector.py  gaming-robot-arm.code-workspace  main.py  motion.py  pyproject.toml  requirements-ml.txt  requirements.txt  tracker.py  tracker_new.py
.claude/: settings.local.json
control/: __init__.py  connect_bot.py  uarm_controller.py
data/calibration/: board_pixels.json  cam_to_robot_homography.json
examples/: cam.py  move_figures.py  move_uArm.py  test_voice_commands.py  webcam_native.py  workspace_scan.py
gaming_robot_arm/: .gaming_robot_arm_launcher.json  __init__.py  __main__.py  app.py  config.py  runtime.py
gaming_robot_arm/calibration/: __init__.py  board_pixels.json  calibration.py  cam_to_robot_homography.json  live_calibration.py  mill_default_calibration.py
gaming_robot_arm/control/: __init__.py  uarm_controller.py
gaming_robot_arm/games/: __init__.py
gaming_robot_arm/games/common/: __init__.py  interfaces.py
gaming_robot_arm/games/mill/: __init__.py  board.py  builtin_ai.py  constants.py  mill_board_detector.py  neural_ai.py  neural_features.py  neural_model.py  playable.py  (+3 more)
gaming_robot_arm/ui/: __init__.py  launcher.py
gaming_robot_arm/utils/: cli.py  homography.py  logger.py
gaming_robot_arm/vision/: detector_config.py  figure_detector.py  figure_detector_config.json  mill_board_detector.py  recording.py  visualization.py
models/: mill_ab3_refresh.pt
models/champion/: mill_champion.pt
models/evolution_ab_continued/: best_overall.pt  evolution_summary.jsonl
scripts/mill/: mill_ai_benchmark.py  mill_evolve_population.py  mill_generate_selfplay_data.py  mill_generate_teacher_data.py  mill_inspect_checkpoint.py  mill_selfplay_loop.py  mill_train_neural.py  mill_train_watchdog.py
utils/: __init__.py  logger.py  timing.py  visualization.py
vision/: board_detector.py  board_detector_new.py  detector.py  figure_detector.py  record_dataset.py  recorder.py  recording.py  visualization.py
(+41 files in other folders)
