[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaming-robot-arm"
version = "0.1.0"
description = "Steuerungs- und Vision-Werkzeuge fuer den Gaming Robot Arm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pyserial>=3.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.5",
]
vision-ml = [
    "torch>=2.5",
    "torchvision>=0.17",
]
ui = [
    "PySide6>=6.6",
]
speech = [
    "RealtimeSTT>=0.3",
    "pyaudio>=0.2",
    "rapidfuzz>=3.0",
    "spacy>=3.0",
]

[project.scripts]
gra = "gaming_robot_arm.__main__:main"
gra-mill-play = "gaming_robot_arm.games.mill.cli.play:main"
gra-mill-benchmark = "gaming_robot_arm.games.mill.cli.benchmark:main"
gra-mill-generate-teacher = "gaming_robot_arm.games.mill.cli.generate_teacher_data:main"
gra-mill-generate-selfplay = "gaming_robot_arm.games.mill.cli.generate_selfplay_data:main"
gra-mill-train = "gaming_robot_arm.games.mill.cli.train:main"
gra-mill-watchdog = "gaming_robot_arm.games.mill.cli.train_watchdog:main"
gra-mill-selfplay-loop = "gaming_robot_arm.games.mill.cli.selfplay_loop:main"
gra-mill-inspect-checkpoint = "gaming_robot_arm.games.mill.cli.inspect_checkpoint:main"
gra-mill-evolve = "gaming_robot_arm.games.mill.cli.evolve_population:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaming_robot_arm*"]
